<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">doTeClient</string>
    <string name="hello_world">Hello world!</string>
    <string name="loading">Loading</string>
    <string name="title_activity_account_creator">Creating New Account</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="tag">Tag</string>
    <string name="uniqueid">A Unique ID</string>
    <string name="name">Name</string>
    <string name="aboutme">About Me</string>
    <string name="aboutmehint">Say something about you...</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirmp">Confirm</string>
    <string name="namehint">Your name ...</string>
    <string name="phonehint">Your mobile number</string>
    <string name="contentDescription_profileImage">Profile Image</string>
    <string name="text_browseImage">Browse Image</string>
    <string name="text_saveImage">Save</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_search_contact">Search Contact</string>

</resources>
